# spot-planner

./: AGENTS.md  ALGORITHM_SAFETY_ANALYSIS.md  Cargo.toml  FIX_HANG_2026_02_15.md  README.md  debug_chunk_tracing.py  debug_constraint_violation.py  debug_custom_test_data.py  debug_expensive_day.py  debug_prefers_cheap.py  debug_prefers_cheap_verbose.py  debug_realistic_daily.py  debug_trace.py  debug_under_selection_2026_02_16.py  pyproject.toml  visualize_results.py
.github/: SETUP.md
.github/workflows/: publish.yml
src/: lib.rs
src/spot_planner/: brute_force.py  main.py  two_phase.py
src/spot_timer/: main.py
tests/: corner_cases_test.py  dynamic_min_consecutive_test.py  extended_algorithm_test.py  main_test.py  performance_test.py  real_price_test.py  regression_test_1.py  slow_parameters_test.py  test_bridge_gap_regression.py  test_crash_2026_02_27.py  test_crash_2026_03_01.py  test_gap_bridge_2026_02_17.py  test_rust_vs_python.py  test_under_selection_2026_02_16.py  visualization_scenarios_test.py
visualization_results/: README.md
