[project]
name = "spot-planner"
version = "0.1.0"
description = "Algorithm for finding the cheapest periods in a sequence of prices"
readme = "README.md"
authors = [
    { name = "Jaakko Vuori", email = "jaakko.vuori@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "src"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
